--- a/release/build.xml
+++ b/release/build.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="VAnnotations" default="release">
+<project name="VAnnotations" default="build">
 
-  <property name="RELEASE" value="0.9"/>
+  <typedef resource="org/violetlib/vbuilder/ant/antlib.xml"/>
+
+  <property name="RELEASE" value="1"/>
 
   <tstamp>
     <format property="NOW" timezone="GMT" pattern="yyyy-MM-dd'T'HH:mm:ss'Z'"/>
   </tstamp>
+
+  <property name="libname" value="VAnnotations"/>
+  <property name="artifactCoordinates" value="org.violetlib:vannotations:${RELEASE}"/>
 
   <property name="base" location=".."/>
   <property name="src" location="${base}/src"/>
@@ -15,14 +20,12 @@
   <property name="classesdir" location="${builddir}/classes"/>
   <property name="distdir" location="dist"/>
   <property name="debug" value="false"/>
+
   <property name="fullReleaseName" value="${RELEASE} ${NOW}"/>
 
-  <target name="init">
-    <echo level="info" message="${fullReleaseName}"/>
-  </target>
-
   <target name="clean">
-    <delete includeEmptyDirs="true" failonerror="false"><fileset dir="${builddir}"/></delete>
+    <deleteDirectory directory="${builddir}"/>
+    <deleteDirectory directory="${distdir}"/>
   </target>
 
   <target name="saveIDs">
@@ -30,30 +33,19 @@
     <echo file="${classesdir}/org/violetlib/annotations/BUILD.txt" message="${NOW}"/>
   </target>
 
-  <target name="compile-Java">
-    <mkdir dir="${classesdir}"/>
-    <javac
-      encoding="UTF-8"
+  <target name="build" depends="clean, saveIDs">
+    <echo level="info" message="Building ${libname} ${fullReleaseName}"/>
+    <javaLibrary
+      name="${libname}"
+      dist="${distdir}"
       release="8"
-      srcdir="${src}"
-      destdir="${classesdir}"
-      debug="${debug}"
-      optimize="true"
-      includeantruntime="false"
-      fork="true"
+      codeSigningKey="${codeSignKey}"
+      mavenCoordinates="${artifactCoordinates}"
+      buildRoot="${builddir}"
+      manifest="${resourcesdir}/Manifest"
       >
-      <patternset>
-        <include name="org/violetlib/**/*.java"/>
-      </patternset>
-    </javac>
+      <source base="${src}"/>
+    </javaLibrary>
   </target>
-
-  <target name="VAnnotations" depends="compile-Java,saveIDs">
-    <echo level="info" message="Building VAnnotations ${fullReleaseName}"/>
-    <mkdir dir="${distdir}"/>
-    <jar jarfile="${distdir}/VAnnotations.jar" basedir="${classesdir}" manifest="${resourcesdir}/Manifest"/>
-  </target>
-
-  <target name="release" depends="clean,VAnnotations"/>
 
 </project>
